# file-store-client

./: CHANGELOG.md  Cargo.toml  README.md  config.toml  rust-toolchain.toml
.github/workflows/: release.yml
src/: clap_struct.rs  config.rs  interface_server.rs  main.rs
src/controller/: mod.rs
