[package]
name = "file-store-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
netxclient = { version = "1.8",features=["use_rustls"] }
tokio-rustls="0.23"
rustls-pemfile="1"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
blake3 = "1.3"
hex = "0.4"
toml = "0.7"
indicatif = "0.17"