[package]
name = "fsc"
version = "0.1.5"
edition = "2021"
authors = ["luyi <luyikk@126.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/file-store-client"
description = "file store client."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
netxclient = { version = "1.9",features=["use_rustls","dserde"] }
tokio-rustls="0.24"
rustls-pemfile="1"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
blake3 = "1.3"
hex = "0.4"
toml = "0.7"
indicatif = "0.17"